--- a/Basics/1.Observable.md
+++ b/Basics/1.Observable.md
@@ -1,3 +1,11 @@
+# Basics 1.
+1. Observable
+2. Dispose
+3. Implicit Observable guarantees
+4. Observable 만들기
+5. Stateless
+6. Sharing subscription
+
 # Observable
 
 ## 1) Observable == Swift's Sequence
